--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   go_router: ^12.1.1
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
