--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "emulator": "cd wsl2-avd-connector && connector.bat",
-    "app": "flutter run"
+    "app": "flutter run",
+    "format": "dart fix --apply"
   },
   "license": "CC BY-NC 4.0"
 }
