--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   latlong2: ^0.9.0
   go_router: ^12.1.1
   flutter_riverpod: ^2.4.9
+  flutter_pw_validator: ^1.6.0
 
 dev_dependencies:
   flutter_test:
